fixed #377 overflow issue

--- a/assets/css/neverMissAnUpdate.css
+++ b/assets/css/neverMissAnUpdate.css
@@ -1,5 +1,4 @@
 .neverMissUpdate {
-  width: 100vw;
   height: auto;
   display: flex;
   justify-content: center;
